accordion-to-tabs component: JS module

--- a/app/scss/___global/_page.scss
+++ b/app/scss/___global/_page.scss
@@ -11,6 +11,7 @@ body {
   background-color: $c-body__bg;
   box-shadow: 0 0 1em rgba($c-body__text, .22);
   color: $c-body__text;
+  font-family: Lato, sans-serif;
   font-size: $u-base__text;
   margin-left: auto;
   margin-right: auto;
