--- a/app/scss/___global/_typo.scss
+++ b/app/scss/___global/_typo.scss
@@ -1,4 +1,11 @@
 article {
+  header {
+    strong {
+      color: $c-info;
+      font-weight: 900;
+    }
+  }
+
   p {
     margin: 0;
     text-align: justify;
